--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="main.css">
-    <title>Outfits fitness</title>
+    <title>loja de roupas academia</title>
 </head>
 <body>
     <header class="navbar  navbar-expand-lg sticky-top p-4" id="cabecalho">
